# whisper-asr-fastapi

./: Dockerfile  README.md  docker-compose.dev.yaml  pyproject.toml  testing.ipynb
app/: Dockerfile  main.py  requirements.txt
asr_inference_service/: main.py  model.py
vad/: Dockerfile  main.py  requirements.txt  schemas.py
